--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alembic==1.7.1
 autopep8==1.5.7
+bcrypt==3.2.0
+cffi==1.14.6
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
@@ -12,7 +14,9 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 Mako==1.1.5
 MarkupSafe==2.0.1
+psycopg2-binary==2.9.1
 pycodestyle==2.7.0
+pycparser==2.20
 PyJWT==2.1.0
 python-dotenv==0.19.0
 six==1.16.0
