--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 Mako==1.1.5
 MarkupSafe==2.0.1
+marshmallow==3.13.0
 psycopg2-binary==2.9.1
 pycodestyle==2.7.0
 pycparser==2.20
