--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-JWT-Extended==4.3.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.1
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 Mako==1.1.5
@@ -20,6 +21,7 @@ pycodestyle==2.7.0
 pycparser==2.20
 PyJWT==2.1.0
 python-dotenv==0.19.0
+redis==3.5.3
 six==1.16.0
 SQLAlchemy==1.4.23
 toml==0.10.2
